# ichimoku

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: XLB.csv  XLC.csv  XLE.csv  XLF.csv  XLI.csv  XLK.csv  XLP.csv  XLRE.csv  XLU.csv  XLV.csv  XLY.csv
data/holdings/: AAPL.csv  ERX.csv  NVDA.csv  QQQ.csv
nbs/: download_sectors.ipynb  plots.ipynb
src/: ichimoku.py  main.py  ticker.py
tests/: conftest.py  test_ichimoku.py  test_ticker.py
